<resources>
	<string name="app_name" translatable="false">Android-ERestaurant</string>
	<string name="home_starters">Starters</string>
	<string name="home_dishes">Dishes</string>
	<string name="home_desserts">Desserts</string>
	<string name="default_preview" translatable="false">#</string>
	<string name="default_unknown" translatable="false">\???</string>
	<string name="currency_euro" translatable="false">€</string>
	<string name="food_prices_label">Prices</string>
	<string name="food_ingredients_label">Ingredients</string>
	<string name="food_gallery_label">Gallery</string>
	<string name="list_bullet" translatable="false">•</string>
	<string name="list_hyphen_bullet" translatable="false">⁃</string>
	<string name="reload">Reload</string>
	<string name="minus" translatable="false">-</string>
	<string name="plus" translatable="false">+</string>
	<string name="cart">Cart</string>
	<string name="your_cart">Your cart</string>
	<string name="order">Order</string>
	<string name="first_name">First name</string>
	<string name="last_name">Last name</string>
	<string name="address">Address</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm password</string>
	<string name="sign_in">Sign in</string>
	<string name="register">Register</string>
	<string name="no_account">No account? Create one!</string>
	<string name="have_account">Have an account? Sign in!</string>
	<string name="api_error">API error.</string>
	<string name="form_error">Invalid form.</string>
	<string name="password_error">Passwords are not identical.</string>
	<string name="order_success">Your command has been ordered!</string>
	<string name="order_error">An error occurred while ordering…</string>
	<string name="empty_cart">There is no items in your cart.</string>
</resources>