<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".HomeActivity">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<Button
			android:id="@+id/buttonStarters"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/home_starters" />

		<Button
			android:id="@+id/buttonDishes"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/home_dishes" />

		<Button
			android:id="@+id/buttonDesserts"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/home_desserts" />
	</LinearLayout>

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/home_toolbar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:minHeight="?attr/actionBarSize"
		android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>