<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:id="@+id/cartItemName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:text="@string/default_preview"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/cartItemCount"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/cartItemSize"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:text="@string/default_preview"
		android:textAllCaps="false"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/cartItemName"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/cartItemCount"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_weight="1"
		android:text="@string/default_unknown"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/cartItemImage"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageButton
		android:id="@+id/deleteCartItemButton"
		style="@style/Widget.AppCompat.ImageButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@android:drawable/ic_delete" />

	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/minus"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/cartItemSize"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/cartItemAmount"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/default_unknown"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView5"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/cartItemImage"
		android:layout_width="48dp"
		android:layout_height="48dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@android:drawable/ic_menu_info_details" />

</androidx.constraintlayout.widget.ConstraintLayout>